Convert Predefined Commands to the YamlToBot Scripting API
- Predefined/Builtin commands have been replaced with scripts, and the API has been slightly restructured to allow scripts to have more functionality
- Many items have had documentation added and/or updated
- Bumped Version to INDEV.2